[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pebarest"
version = "0.1.0"
description = "PebaRest Framework, fast to code, take the control of your application."
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["pebarest*"]
